Optimization. Added JsonBufferBackedToken.