@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id "io.github.qishr.cascara-meta.java-library" version "0.1.0"
     id "io.github.qishr.cascara-meta.publish" version "0.1.0"
 }
@@ -33,5 +34,12 @@ tasks.withType(Test).configureEach {
 
     // forkEvery = 1
     // jvmArgs '-XX:StartFlightRecording=duration=20s,filename=json_profile.jfr'
+}
+
+
+application {
+    mainClass.set("io.github.qishr.cascara.lang.json.TokenizerBenchmark")
+    // mainModule.set("cascara.ui.demo")
+    // applicationDefaultJvmArgs = ['--add-reads', 'cascara.ui=ALL-UNNAMED']
 }
 
